fix SwitchBootstraps