@@ -38,6 +38,10 @@ tasks.compileJava {
     }
 }
 
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+
 val removeLibs by tasks.registering {
     doLast {
         delete(fileTree("dir" to "build/libs", "include" to "**/*.jar"))
